# brief

./: CLAUDE.md  Cargo.toml  PRD.md  README.md
.github/workflows/: audit.yml  ci.yml  release.yml
Formula/: brief.rb
src/: auth.rs  cache.rs  config.rs  detect.rs  hook.rs  inject.rs  main.rs  sync.rs
tests/integration/: main.rs
